Fix hr display and extra padding

--- a/assets/css/argon-design-system.css
+++ b/assets/css/argon-design-system.css
@@ -98,6 +98,7 @@ body {
 }
 
 hr {
+  border: 1px solid #eee !important;
   box-sizing: content-box;
   height: 0;
   overflow: visible;
