--- a/assets/css/doku.scss
+++ b/assets/css/doku.scss
@@ -33,7 +33,7 @@ input, select {
 
 // Fix Content Hidden behind navbar when you reach via anchor
 :target {
-    padding-top: 6rem;
+    // padding-top: 6rem;
  }
 
 // Selection
